Added controller interfaces. Working on BasePaymentsController

--- a/QuickBooks.Net/QuickBooks.Net.csproj
+++ b/QuickBooks.Net/QuickBooks.Net.csproj
@@ -17,5 +17,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\QuickBooks.Net.Data\QuickBooks.Net.Data.csproj" />
+    <ProjectReference Include="..\Quickbooks.Net.Payments.Data\QuickBooks.Net.Payments.Data.csproj" />
   </ItemGroup>
 </Project>
