--- a/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
+++ b/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuickBooks.Net\QuickBooks.Net.csproj" />
+  </ItemGroup>
 </Project>
