--- a/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
+++ b/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
@@ -8,4 +8,9 @@
     <ProjectReference Include="..\QuickBooks.Net.Data\QuickBooks.Net.Data.csproj" />
     <ProjectReference Include="..\QuickBooks.Net\QuickBooks.Net.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="test_names.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
