--- a/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
+++ b/QuickBooks.Net.Tests/QuickBooks.Net.Tests.csproj
@@ -5,10 +5,17 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\QuickBooks.Net.Data\QuickBooks.Net.Data.csproj" />
     <ProjectReference Include="..\QuickBooks.Net\QuickBooks.Net.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="test_names.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
